objects/Salesforce_free_training__c.object
<CustomObject>
    <description>test</description>
    <label>Salesforce free training</label>
    <nameField>
        <label>Salesforce trainer name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce free trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Students__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Students</label>
        <referenceTo>Students__c</referenceTo>
        <relationshipLabel>Salesforce free trainings</relationshipLabel>
        <relationshipName>Salesforce_free_trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_name__c</fullName>
        <label>Student name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>student_email__c</fullName>
        <label>student email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Student_address__c</fullName>
        <label>Student address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Student_contact_number__c</fullName>
        <label>Student contact number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>overal_academic_peercentage__c</fullName>
        <label>overal academic peercentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <validationRules>
        <fullName>Percentage_error</fullName>
        <active>true</active>
        <errorConditionFormula>overal_academic_peercentage__c  &gt; 60</errorConditionFormula>
        <errorDisplayField>overal_academic_peercentage__c</errorDisplayField>
        <errorMessage>please enter more than 60 percentage</errorMessage>
    </validationRules>
</CustomObject>